--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${7146d49c-2bcc-4451-a9c7-4cbc3b89a2b5}
-          GH_TOKEN: ${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}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TIMEZONE: "True"
           SHOW_OS: "True"
           SHOW_PROJECTS: "True"
