--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: Waka Readme
 
 on:
+  push:
+    branches: 
+      - master
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *'
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -12,11 +14,10 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${7146d49c-2bcc-4451-a9c7-4cbc3b89a2b5}
-          GH_TOKEN: ${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}
-          SHOW_TIMEZONE: "True"
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_DAYS_OF_WEEK: "False"
           SHOW_OS: "True"
-          SHOW_PROJECTS: "True"
-          SHOW_PROFILE_VIEWS: "True"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_PROJECTS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
