--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: Waka Readme
 
 on:
-  push:
-    branches: 
-      - master
+  on:
   schedule:
-    - cron: '0 0 * * *'
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
+  workflow_dispatch:
 
 jobs:
   update-readme:
