--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,6 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_OS: "True"
-          SHOW_PROJECTS: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_LOC_CHART: "False"
+          SHOW_TITLE: "False"
+          COMMIT_MESSAGE: Updated the Readme
+          
