--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,23 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
+  push:
+    branches: 
+      - master
   schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
-          SHOW_TITLE: "False"
-          COMMIT_MESSAGE: Updated the Readme
-          
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
