--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: generate animation
 
-on:
-  schedule:
-    - cron: "0 */12 * * *" # every 12 hours
+on: workflow_dispatch
+
+# on:
+#   schedule:
+#     - cron: "0 */12 * * *" # every 12 hours
 
 # on: [push]
 
