--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: Platane/snk@master
         with:
           github_user_name: NeoDoggy
-          svg_out_path: dist/github-contribution-grid-snake.svg?palette=github-dark
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
