--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: generate animation
 
-on: workflow_dispatch
+# on: workflow_dispatch
 
-# on:
-#   schedule:
-#     - cron: "0 */12 * * *" # every 12 hours
+on:
+  schedule:
+    - cron: "0 0 * * *"
 
 # on: [push]
 
